--- a/front/src/components/App.scss
+++ b/front/src/components/App.scss
@@ -1,10 +1,16 @@
 //@import 'src/styles/shared';
 
 .app {
-  width: 1920px;
-  height: 1080px;
+  margin: auto;
+  width: 122mm;
+  height: 69mm;
+  //background: #303030;
   background: black;
   color: white;
   font-size: 40px;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+  gap: 1mm;
 }
 
