--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -21,6 +21,8 @@
 
 body {
   margin: 0;
+  background: black;
+  //background: #101010;
   padding: 0;
   //font-family: 'Roboto Slab', sans-serif;
   font-family: 'Source Sans Pro', sans-serif; // no mixin here
