--- a/front/src/components/App.scss
+++ b/front/src/components/App.scss
@@ -2,6 +2,8 @@
 
 .app {
   margin-top: 90px;
+  margin-left: 20px;
+  margin-right: 20px;
   //background: #303030;
   background: black;
   color: white;
