--- a/front/src/components/Bargraph.scss
+++ b/front/src/components/Bargraph.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 200px;
   border: solid 3px white;
-  height: 960px;
+  height: 940px;
   top: 0;
   bottom: 0;
   margin: auto;
@@ -40,14 +40,12 @@
     display: flex;
     height: 100%;
     width: 128px;
-    flex-flow: column;
+    flex-flow: column-reverse;
     align-items: center;
     justify-content: space-evenly;
-    background: darkgray;
 
     .led {
-      background: red;
-      height: 45px;
+      height: 40px;
       width: 112px;
     }
   }
